results/SVCOMP/specgen/log-StringValueOf09-2024_03_03_09_45_46.txt
public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> tmp.equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
/home/max/Documents/JMLGPT/tmp/StringValueOf09.java:5: error: cannot find symbol
    //@ ensures \result <==> tmp.equals("33.3333");
                             ^
  symbol:   variable tmp
  location: class StringValueOf09
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (define-fun BL_2100_else_6310__A1 () Bool (not |`conditionalResult_6511_2085_0___2758|)) java.io.IOException: Broken pipe")
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (define-fun |_JML__tmp2149| () REF |_JML__tmp2090|) java.io.IOException: Broken pipe")
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (assert (= BL_10180_then_33 (=> BL_10180_then_33__A1 (=> BL_10180_then_33__A2 BL_10180_afterIf_32)))) java.io.IOException: Stream closed")
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (define-fun BL_2058_then_606__A4 () Bool (= |BL_2058_afterIf_605_source| 606)) java.io.IOException: Stream closed")
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (define-fun BL_1413_afterIf_282__A7 () Bool (= |ASSERT_667_1413| (or (not (distinct |_JML__tmp482| NULL)) (distinct |_JML__tmp482| NULL)))) java.io.IOException: Stream closed")
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (define-fun |_JML__tmp601| () Bool (= |_JML__tmp513| |_JML__tmp600|)) java.io.IOException: Stream closed")

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (declare-fun |BL_17802_afterIf_2467_source| () Int) java.io.IOException: Stream closed")
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (define-fun |_JML__tmp519| () Bool (distinct (select |java.lang.CharSequence_charArray_1045_0_1380892660| |_JML__tmp487|) NULL)) java.io.IOException: Stream closed")
1 error

public class StringValueOf09 {
    //@ requires arg != null;
    //@ requires arg.length() > 0;
    //@ requires (\forall int i; 0 <= i && i < arg.length(); Character.isDigit(arg.charAt(i)) || arg.charAt(i) == '.' || arg.charAt(i) == '-');
    //@ ensures \result <==> String.valueOf(Double.parseDouble(arg)).equals("33.3333");
    public static boolean f(String arg) {
        double doubleValue = Double.parseDouble(arg); // no suffix, double is default
        String tmp = String.valueOf(doubleValue);
        return tmp.equals("33.3333");
    }
}
error: An error while executing a proof script for f: (error "Error writing to solver: (define-fun |_JML__tmp50| () Bool (<= |_JML__tmp44| |java.lang.Character_OTHER_SYMBOL|)) java.io.IOException: Stream closed")
1 error

